--- a/src/css/CsInfoAgree.css
+++ b/src/css/CsInfoAgree.css
@@ -1,6 +1,6 @@
 .document1{
-    width: 40%;
-    margin-left: 30%;
+    width: 110%;
+    margin-left: 2%;
     margin-top: 1.8%;
     font-size: larger;
     text-align: left;
@@ -11,15 +11,27 @@
     text-align: left;
     margin-top: 3%;
     margin-left:4%;
+    padding-left: 0;
+}
+.agreetitle{
+    font-size: 100%;
+}
+.showcontent{
+    width: 70px;
+    font-size:65%;
+    margin-bottom: 10%;
+    margin-left:-70%;
+    overflow: auto;
 }
 
 .container1{
-   vertical-align: auto;
-   line-height: 5%;
+    margin-left: -15%;
+    text-align: center;
+    width:375%;
 }
 
 .agree{
-    font-size:150%;
+    font-size:105%;
 }
 
 #div_1{
