--- a/src/css/JudgeResult.css
+++ b/src/css/JudgeResult.css
@@ -1,18 +1,17 @@
-.ResultTable{
-    width: 30%;
-    margin-left: 27%;
-    white-space:nowrap;
+.JudgeResultTable{
+    width: 100%;
+    margin-left: 5%;
+    margin-top: 5%;
     
 }
-
 .title1{
-    margin-left: 18%;
-    white-space: nowrap;
+    font-size: 110%;
+    margin-left: -14%;
+    width: 120%;
 }
 .title2{
-    margin-left: 15%;
-    white-space:nowrap;
-    background-color: lightCyan;
     width: 100%;
-    
+    font-size: 90%;
+    margin-left: -5%;
+    background-color: lightCyan;
 }
