--- a/src/css/JudgeStep2.css
+++ b/src/css/JudgeStep2.css
@@ -1,9 +1,9 @@
 .TotalSection2{
-    width: 50%;
-    margin-left: 25%;
-}
-#judge2H2{
-    margin-top: 5%;
+    width: 100%;
+    margin-left: 2%;
 }
 
+.selfcheck{
+    width:100%
+}
 
