--- a/src/css/DocCollectList.css
+++ b/src/css/DocCollectList.css
@@ -1,5 +1,9 @@
 .document5{
-    margin-top: 2%;
-    width: 40%;
-    margin-left: 30%;
+    margin-top: 5%;
+    width: 100%;
+    margin-left: 3%;
+    text-align: left;
+}
+.collecttitle{
+    margin-left: 15%;
 }
