--- a/src/css/JudgeStep1.css
+++ b/src/css/JudgeStep1.css
@@ -1,6 +1,6 @@
 .TotalSection{
-    width: 50%;
-    margin-left: 25%;
+    width: 100%;
+    margin-left: 1%;
     margin-top: 2%;
 
 }
@@ -8,5 +8,21 @@
     margin-top: 5%;
     
 }
+.titlestep1{
+    margin-top:5%;
+}
 
-
+.JudgeStep1Notice{
+    font-size: 20%;
+    width: 50%;
+}
+.Noticon{
+    width: 105%;
+}
+.JudgeAccordion{
+    margin-left: -5%;
+    width: 100%;
+}
+.headerAccordion{
+    width: 97%;
+}
